[WIP] Add install steps to install Keepalived from source
* Keepalived is installed from source.
* TODO: Configuring the Keepalived service is still to be done.

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,8 @@
 ---
-# handlers file for keepalived_role
+
+- name: Restart Keepalived
+  become: yes
+  become_user: root
+  service: "name={{ keepalived_name }} state=restarted"
+
+...
