--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,41 @@
 ---
-# defaults file for keepalived_role
+
+# Keepalived version
+keepalived_version_string: '1.3.9'
+# List of dependencies of Keepalived
+keepalived_dependencies:
+  - 'build-essential'
+  - 'curl'
+  - 'gcc'
+  - 'libssl-dev'
+  - 'libnl-3-dev'
+  - 'libnl-genl-3-dev'
+  - 'libsnmp-dev'
+# IP address of Keepalived
+keepalived_instance_ip: "{{ ansible_default_ipv4.address }}"
+#
+keepalived_base_folder: '/usr/local/'
+# Name of Keepalived
+keepalived_name: 'keepalived'
+#
+keepalived_folder: 'keepalived/'
+# Renamed folder which contains Keepalived
+keepalived_build_folder: '{{ keepalived_name }}-{{ keepalived_version_string }}/'
+#
+keepalived_sbin_folder: 'sbin/'
+# Folder in which Keepalived is installed
+keepalived_path: "{{ keepalived_base_folder }}{{ keepalived_build_folder }}{{ keepalived_sbin_folder }}{{ keepalived_name }}"
+# Temporary folder in which Keepalived is downloaded
+keepalived_tmp_dir: '/tmp/'
+# URL from which Keepalived can be downloaded
+keepalived_download_url: "https://www.keepalived.org/software/keepalived-{{ keepalived_version_string }}.tar.gz"
+#
+keepalived_conf_dir: '/etc/keepalived/'
+# Name of the template file for Systemd service
+keepalived_service_template: 'keepalived.service'
+# Folder into which Redis service file is copied
+keepalived_systemd_folder: '/etc/systemd/system/'
+# Name of Redis Server service file
+keepalived_service_file: 'keepalived.service'
+
+...
