--- a/meta/main.yml
+++ b/meta/main.yml
@@ -43,7 +43,7 @@ galaxy_info:
   platforms:
     - name: Ubuntu
       versions:
-        - bionic
+        - eoan
         - focal
 
   galaxy_tags: []
@@ -57,4 +57,3 @@ galaxy_info:
 dependencies: []
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
-  
