Add license information to all files
* Add Apache 2.0 license and copyright information to all files.
* Use "reuse" compliance check in gitlab ci pipeline.

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,10 @@
----
+# SPDX-FileCopyrightText: 2020 Helmholtz Centre for Environmental Research (UFZ)
+# SPDX-FileCopyrightText: 2020 Helmholtz-Zentrum Dresden-Rossendorf (HZDR)
+#
+# SPDX-License-Identifier: Apache-2.0
 
+---
+#
 - name: Restart Keepalived
   become: yes
   service:
