--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -1,3 +1,8 @@
+# SPDX-FileCopyrightText: 2020 Helmholtz Centre for Environmental Research (UFZ)
+# SPDX-FileCopyrightText: 2020 Helmholtz-Zentrum Dresden-Rossendorf (HZDR)
+#
+# SPDX-License-Identifier: Apache-2.0
+
 ---
 - name: Prepare
   hosts: all
@@ -8,3 +13,5 @@
           - sudo      # for `become` privilege escalation
           - iproute2  # for gathering network facts
         state: present
+
+...
