--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,5 +1,12 @@
+# SPDX-FileCopyrightText: 2020 Helmholtz Centre for Environmental Research (UFZ)
+# SPDX-FileCopyrightText: 2020 Helmholtz-Zentrum Dresden-Rossendorf (HZDR)
+#
+# SPDX-License-Identifier: Apache-2.0
+
 ---
 - hosts: localhost
   remote_user: root
   roles:
     - keepalived_role
+
+...
