--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ variables:
   - chmod 0750 $CI_PROJECT_DIR
   # Install tools.
   - pip install -U pip
-  - pip install pipenv
+  - pip install --ignore-installed pipenv
   # Install project dependencies.
   - pipenv install --dev
 
