Put mandatory variables into README file
* Mandatory variables should not be given with default values but set by
the respective user of the Ansible role.
* Remove mandatory variables from defaults main yaml file.
* Check that mandatory variables are set in tasks main yaml file.
* Describe mandatory variables in README md file.

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -11,5 +11,18 @@
     - name: "Include keepalived_role"
       include_role:
         name: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
+  vars:
+    router_id: 'KEEPALIVED_1'
+    interface: "enp0s8"
+    state: 'MASTER'
+    priority: '200'
+    weight: '2'
+    virtual_router_id: '123'
+    unicast_src_ip: '192.168.33.14'
+    unicast_peers:
+      - '192.168.33.15'
+      - '192.168.33.16'
+    virtual_ip_address: "192.168.33.100"
+    virtual_ipaddress_config: "192.168.33.100 dev enp0s8"
 
 ...
