--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -4,12 +4,18 @@
 # SPDX-License-Identifier: Apache-2.0
 
 ---
-# Dummy play for verification steps.
-- name: Verify
+- name: Verify Keepalived
   hosts: all
   tasks:
-  - name: Example assertion
-    assert:
-      that: true
+    - name: Populate service facts.
+      service_facts:
+      register: services_state
+
+    - name: Check that Keepalived is running on instance.
+      assert:
+        that:
+          - services_state.ansible_facts.services['keepalived.service'].state is search("running")
+        fail_msg: "Keepalived need to be running on instance."
+        success_msg: "Keepalived is running on instance."
 
 ...
