--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,7 +5,7 @@
 
 ---
 # Keepalived version
-keepalived_version: '2.1.3'
+keepalived_version: '2.1.4'
 # Name of Keepalived user
 keepalived_user: 'keepalived'
 # Name of Keepalived group
@@ -57,5 +57,21 @@ notification_email_from: 'keepalived@localhost'
 smtp_server: '127.0.0.1'
 # Keepalived instance authentication password
 auth_pass: 'changeme'
+# Keepalived instance virtual router ID
+virtual_router_id: '51'
+# Weight of the Keepalived instance
+weight: '1'
+# Keepalived instance priority
+priority: '100'
+# Keepalived instance state MASTER or BACKUP
+state: 'MASTER'
+# Keepalived instance router ID
+router_id: 'KEEPALIVED_1'
+# Keepalived instance network interface
+interface: "{{ ansible_default_ipv4.interface }}"
+# Keepalived instance virtual IP address and network interface
+virtual_ipaddress_config: "{{ virtual_ip_address }} dev {{ interface }}"
+# Keepalived instance unicast source IP address
+unicast_src_ip: '{{ ansible_default_ipv4.address }}'
 
 ...
