Make killall command available in test image
Signed-off-by: Norman Ziegner <norman.ziegner@ufz.de>

--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -13,6 +13,7 @@
         name:
           - sudo      # for `become` privilege escalation
           - iproute2  # for gathering network facts
+          - psmisc    # provides `killall` command
         state: present
 
 ...
