Pass dependencies directly as list to package module instead of looping over them
Signed-off-by: Norman Ziegner <norman.ziegner@ufz.de>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -19,10 +19,9 @@
 - name: Install dependencies for Keepalived.
   become: yes
   package:
-    name: "{{ item }}"
+    name: "{{ keepalived_dependencies }}"
     state: present
     update_cache: yes
-  with_items: "{{ keepalived_dependencies }}"
 
 - name: Create Keepalived Group.
   become: yes
