--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -44,10 +44,7 @@
     cmd: "{{ keepalived_path }} --version"
   register: keepalived_version_installed
   when: keepalived_installed.stat.exists
-  # Version string will always result in state "changed".
-  changed_when:
-    - keepalived_version_installed.rc != 0
-    - keepalived_version_installed.stdout | regex_search('^Keepalived v=[0-9]{1,2}\\.[0-9]{1,2}\\.[0-9]{1,2}') != 'Keepalived v='+keepalived_version
+  changed_when: false
 
 - name: Put value of installed version into an Ansible fact.
   set_fact:
