--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,11 +5,9 @@
 
 ---
 # Keepalived version
-keepalived_version: '2.1.4'
-# Name of Keepalived user
-keepalived_user: 'keepalived'
-# Name of Keepalived group
-keepalived_group: 'keepalived'
+keepalived_version: '2.1.5'
+# URL from which Keepalived can be downloaded
+keepalived_download_url: "https://www.keepalived.org/software/keepalived-{{ keepalived_version }}.tar.gz"
 # List of dependencies of Keepalived
 keepalived_dependencies:
   - 'build-essential'
@@ -19,36 +17,37 @@ keepalived_dependencies:
   - 'libnl-3-dev'
   - 'libnl-genl-3-dev'
   - 'libsnmp-dev'
-# Folder to put the Keepalived installation into
-keepalived_base_dir: '/usr/local/'
 # Name of Keepalived
 keepalived_name: 'keepalived'
-# Folder which contains Keepalived
-keepalived_build_dir: "{{ keepalived_name }}-{{ keepalived_version }}/"
+
+# Name of Keepalived user
+keepalived_user: 'keepalived'
+# Name of Keepalived group
+keepalived_group: 'keepalived'
+
+# Folder to put the Keepalived installation into
+keepalived_base_dir: '/usr/local'
 # Path to Keepalived build folder
-keepalived_build_dir_path: "{{ keepalived_base_dir }}{{ keepalived_build_dir }}"
+keepalived_build_dir: "{{ keepalived_base_dir }}/{{ keepalived_name }}"
 # Folder which contains Keepalived sources
-keepalived_dir: "{{ keepalived_build_dir_path }}keepalived/"
-# Folder which contains the keepalived binaries
-keepalived_sbin_dir: "{{ keepalived_build_dir_path }}sbin/"
+keepalived_dir: "{{ keepalived_build_dir }}/keepalived"
 # Path to Keepalived binary
-keepalived_path: "{{ keepalived_sbin_dir }}{{ keepalived_name }}"
-# URL from which Keepalived can be downloaded
-keepalived_download_url: "https://www.keepalived.org/software/keepalived-{{ keepalived_version }}.tar.gz"
+keepalived_path: "{{ keepalived_build_dir }}/sbin/{{ keepalived_name }}"
 # Folder for configuration files
-keepalived_conf_dir: '/etc/keepalived/'
+keepalived_conf_dir: '/etc/keepalived'
 # Path to Keepalived configuration file
-keepalived_conf_file_path: "{{ keepalived_conf_dir }}{{ keepalived_name }}.conf"
+keepalived_conf_file_path: "{{ keepalived_conf_dir }}/{{ keepalived_name }}.conf"
 # Name of the template file for Systemd service
 keepalived_service_template: 'keepalived.service'
 # Folder into which Keepalived service file is copied
-keepalived_systemd_dir: '/etc/systemd/system/'
+keepalived_systemd_dir: '/etc/systemd/system'
 # Name of Keepalived service file
 keepalived_service_file: 'keepalived.service'
 # Path to Keepalived service template file
-keepalived_service_template_file_path: "{{ keepalived_dir }}{{ keepalived_service_file }}"
+keepalived_service_template_file_path: "{{ keepalived_dir }}/{{ keepalived_service_file }}"
 # Path to Keepalived service file
-keepalived_service_file_path: "{{ keepalived_systemd_dir }}{{ keepalived_service_file }}"
+keepalived_service_file_path: "{{ keepalived_systemd_dir }}/{{ keepalived_service_file }}"
+
 # Configure notification email address
 notification_email: 'name@localhost'
 # Configure notification sender
