Restart keepalived service only after an upgrade
Signed-off-by: Norman Ziegner <norman.ziegner@ufz.de>

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -9,6 +9,7 @@
   service:
     name: "{{ keepalived_name }}"
     state: restarted
+  when: keepalived_installed.stat.exists
 
 - name: Reload Keepalived
   become: yes
