Configure Keepalived to use user, group and process of HAProxy
* Add script_user configuration to config file.
* Add enable_script_security to config file.
* Add config variable haproxy_process_name as a default variable.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -25,6 +25,13 @@ keepalived_user: 'keepalived'
 # Name of Keepalived group
 keepalived_group: 'keepalived'
 
+# HAProxy user for executing keepalived script
+haproxy_user: 'haproxy'
+# HAProxy group for executing keepalived script
+haproxy_group: 'haproxy'
+# HAProxy process name to be check by Keepalived
+haproxy_process_name: 'haproxy'
+
 # Folder to put the Keepalived installation into
 keepalived_base_dir: '/usr/local'
 # Path to Keepalived build folder
