--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -56,6 +56,8 @@ keepalived_service_file: 'keepalived.service'
 keepalived_service_template_file_path: "{{ keepalived_dir }}/{{ keepalived_service_file }}"
 # Path to Keepalived service file
 keepalived_service_file_path: "{{ keepalived_systemd_dir }}/{{ keepalived_service_file }}"
+# Directory for Keepalived PID file
+keepallived_pid_file_dir: "/var/run/{{ keepalived_name }}"
 
 # Configure notification email address
 notification_email: 'name@localhost'
