--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,6 +4,11 @@
 # SPDX-License-Identifier: Apache-2.0
 
 ---
+
+- name: Reread Systemd Configs
+  systemd:
+    daemon_reload: yes
+
 - name: Restart Keepalived
   become: yes
   service:
