Fix typo and make keepalived base directory configurable
* Fix a typo in default variable.
* Make keepalived base directory configurable in service file.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -127,7 +127,7 @@
 - name: Create Directory for Keepalived PID file.
   become: yes
   file:
-    path: "{{ keepallived_pid_file_dir }}"
+    path: "{{ keepalived_pid_file_dir }}"
     state: directory
     owner: "{{ keepalived_user }}"
     group: "{{ keepalived_group }}"
